--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^4.4.1",
     "three": "^0.111.0"
   },
